<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBeigh"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <ImageButton
                android:id="@+id/btn_editar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:background="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/edit" />

            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <ImageButton
                android:id="@+id/btn_borrar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:background="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/delete" />

            <androidx.legacy.widget.Space
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/azulCielo">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65">

            <ImageView
                android:id="@+id/probabilidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margen2"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/circulo_dif1"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_palabra_ingles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                app:fontFamily="sans-serif-smallcaps" /><!--MAYÚSCULAS-->

            <TextView
                android:id="@+id/textView_traduccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/grisOscuro"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_audio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margen3"
                android:layout_marginTop="@dimen/margen1"
                android:layout_marginRight="@dimen/margen3"
                android:layout_marginBottom="@dimen/margen1"
                android:background="@android:drawable/ic_media_play"
                android:contentDescription="@string/audio"
                android:visibility="gone"/>


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>