<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_print"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulCielo"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:focusable="true"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".Vistas.DetailActivity"
    >
    <!--descendantFocusability Y focusableInTouchMode, PARA QUE CUANDO CAMBIE DE PREGUNTA SE QUITE EL FOCO DEL CAMPO RESPUESTA-->


    <include layout="@layout/barra_guardar_atras"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/layout_prin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/borde2"
            android:layout_margin="@dimen/margen3"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margen3"
                android:layout_marginTop="@dimen/margen3"
                android:layout_marginRight="@dimen/margen3"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/card_imagen"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/field_pregunta"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/border_modificar"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/preguntaTest"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:fontFamily="@font/londrina_shadow" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               >

                <TextView
                    android:id="@+id/contesta"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margen2"
                    android:layout_marginTop="@dimen/margen2"
                    android:layout_marginRight="@dimen/margen2"
                    android:layout_marginBottom="@dimen/margen2"
                    android:background="@android:color/transparent"
                    android:text="@string/contesta"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/londrina_shadow" />

                <EditText
                    android:id="@+id/field_respuesta"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margen3"
                    android:layout_marginTop="@dimen/margen0"
                    android:layout_marginRight="@dimen/margen3"
                    android:layout_marginBottom="@dimen/margen3"
                    android:background="@drawable/borde_respuesta_test"
                    android:maxLength="50"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/anton" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sigPregunta"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/fondo_verificar"
                    android:text="@string/ok"
                    android:textColor="@color/colorBlanco"
                    android:textSize="50dp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:layout_margin="@dimen/margen1"
                    app:fontFamily="@font/londrina_shadow" />
            </RelativeLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>